--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -11,6 +11,7 @@ twig:
         global_theme: '%partdb.global_theme%'
         allow_email_pw_reset: '%partdb.users.email_pw_reset%'
         locale_menu: '%partdb.locale_menu%'
+        pickbylight_endpoint: '%partdb.pickbylight_endpoint%'
         attachment_manager: '@App\Services\Attachments\AttachmentManager'
         label_profile_dropdown_helper: '@App\Services\LabelSystem\LabelProfileDropdownHelper'
         error_page_admin_email: '%partdb.error_pages.admin_email%'
