--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -14,6 +14,8 @@ parameters:
   partdb.locale_menu: ['en', 'de', 'it', 'fr', 'ru', 'ja', 'cs', 'da', 'zh', 'pl']    # The languages that are shown in user drop down menu
   partdb.enforce_change_comments_for: '%env(csv:ENFORCE_CHANGE_COMMENTS_FOR)%' # The actions for which a change comment is required (e.g. "part_edit", "part_create", etc.). If this is empty, change comments are not required at all.
 
+  partdb.pickbylight_endpoint: '%env(string:PICKBYLIGHT_ENDPOINT)%' #API Endpoint for PickByLight Controller
+
   partdb.default_uri: '%env(string:DEFAULT_URI)%'             # The default URI to use for the Part-DB instance (e.g. https://part-db.example.com/). This is used for generating links in emails
 
   partdb.db.emulate_natural_sort: '%env(bool:DATABASE_EMULATE_NATURAL_SORT)%' # If this is set to true, natural sorting is emulated on platforms that do not support it natively. This can be slow on large datasets.
@@ -136,6 +138,8 @@ parameters:
 
   env(TRUSTED_PROXIES): '127.0.0.1' #By default trust only our own server
   env(TRUSTED_HOSTS): '' # Trust all host names by default
+  
+  env(PICKBYLIGHT_ENDPOINT):  'https://127.0.0.1:8088/partdb'
 
   env(DEFAULT_URI): 'https://partdb.changeme.invalid/'
 
